testsuite/escript/errors/errors004-reserved-word-as-argument-name.err1
Expected arguments or right-paren in program arglist, got 'Unknown Token: (267,8,'downto')'
